--- a/.github/workflows/e2e-linux.yaml
+++ b/.github/workflows/e2e-linux.yaml
@@ -33,7 +33,7 @@ jobs:
         "${{ inputs.runner-type }}",
       ]
     outputs:
-      vars: ${{ steps.vars.outputs.has_creds}}
+      has_creds: ${{ steps.vars.outputs.has_creds}}
       vm_report: ${{ steps.set-multiple-vars.outputs.VM_REPORT }}
       container_report: ${{ steps.set-multiple-vars.outputs.CONTAINER_REPORT }}
       vm_serial_report: ${{ steps.set-multiple-vars.outputs.VM_SERIAL_REPORT }}
@@ -154,22 +154,50 @@ jobs:
     steps:
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4.0.2
-        if: ${{ needs.test.outputs.vars == 'true' && ((startsWith(inputs.os, 'amazon') && inputs.version != '2' )) && github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true }}
+        if: >-
+          ${{ needs.test.outputs.has_creds == 'true'
+            && ((startsWith(inputs.os, 'amazon')
+            && inputs.version != '2' ))
+            && github.event_name == 'pull_request'
+            && github.event.action == 'closed'
+            && github.event.pull_request.merged == true
+          }}
         with:
           role-to-assume: ${{ secrets.ROLE }}
           role-session-name: credhelper-test
           aws-region: ${{ secrets.REGION }}
       - name: download artifacts
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.08
-        if: ${{ needs.test.outputs.vars == 'true' && ((startsWith(inputs.os, 'amazon') && inputs.version != '2' )) && github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true }}
+        if: >-
+          ${{ needs.test.outputs.has_creds == 'true'
+            && ((startsWith(inputs.os, 'amazon')
+            && inputs.version != '2' ))
+            && github.event_name == 'pull_request'
+            && github.event.action == 'closed'
+            && github.event.pull_request.merged == true
+          }}
         with:
           name: linux-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports
           path: linux-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports
       - name: Display structure of downloaded files
-        if: ${{ needs.test.outputs.vars == 'true' && ((startsWith(inputs.os, 'amazon') && inputs.version != '2' )) && github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true }}
+        if: >-
+          ${{ needs.test.outputs.has_creds == 'true'
+            && ((startsWith(inputs.os, 'amazon')
+            && inputs.version != '2' ))
+            && github.event_name == 'pull_request'
+            && github.event.action == 'closed'
+            && github.event.pull_request.merged == true
+          }}
         run: ls -R linux-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports
       - name: Check and upload e2e tests reports to s3 bucket
-        if: ${{ needs.test.outputs.vars == 'true' && ((startsWith(inputs.os, 'amazon') && inputs.version != '2' )) && github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true }}
+        if: >-
+          ${{ needs.test.outputs.has_creds == 'true'
+            && ((startsWith(inputs.os, 'amazon')
+            && inputs.version != '2' ))
+            && github.event_name == 'pull_request'
+            && github.event.action == 'closed'
+            && github.event.pull_request.merged == true
+          }}
         run: |
           VM_REPORT="${{ github.workspace }}/linux-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports/${{ github.run_id }}-${{ github.run_attempt }}-e2e-vm-report.json"
           CONTAINER_REPORT="${{ github.workspace }}/linux-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports/${{ github.run_id }}-${{ github.run_attempt }}-e2e-container-report.json"
